# Calibration

./: .gitignore  README.md
ACSC/: README.md
ACSC/calibration-ACSC/: calibration.py  picture.py  projection_validation.py  readme.md  utils.py
ACSC/calibration-ACSC/configs/: data_collection.yaml  sample.yaml
ACSC/calibration-ACSC/data/: distortion  intrinsic
ACSC/calibration-ACSC/data/parameter/: corners.pkl  extrinsic
ACSC/calibration-ACSC/data/pcds/: neuvsnap_0315_194309.pcd  neuvsnap_0315_194311.pcd
ACSC/calibration-ACSC/seg/: segmentationext.pyd
ACSC/calibration-ACSC/segmentation/: CMakeLists.txt  segmentation.cpp  setup.py
geography/: polyfit.py  segment_lr.py
imaging/: movie.py
scripts/: fitting_curve.py
utils/: make_depth_map.py  point_vis.py  selectpoint.py  translate_rotate.py  utils.py
